On branch 5/tool/0/techedit modified:   electric/electric-java/com/sun/electric/technology/TechFactory.java modified:   electric/electric-java/com/sun/electric/technology/Technology.java modified:   electric/electric-java/com/sun/electric/tool/user/tecEdit/ArcInfo.java modified:   electric/electric-java/com/sun/electric/tool/user/tecEdit/Info.java modified:   electric/electric-java/com/sun/electric/tool/user/tecEdit/LayerInfo.java modified:   electric/electric-java/com/sun/electric/tool/user/tecEdit/LibToTech.java modified:   electric/electric-java/com/sun/electric/tool/user/tecEdit/Manipulate.java