@@ -320,6 +320,10 @@ public class Info
                 	table[i].ni.newDisplayVar(Artwork.ART_MESSAGE,
 						"ELIB width offset: " + ((Double)table[i].value).doubleValue(), ep);
                     break;
+                case ARCCURVABLE:
+                	table[i].ni.newDisplayVar(Artwork.ART_MESSAGE,
+						"Curvable: " + (((Boolean)table[i].value).booleanValue() ? "Yes" : "No"), ep);
+                    break;
 				case NODEFUNCTION:
 					table[i].ni.newDisplayVar(Artwork.ART_MESSAGE,
 						"Function: " + ((PrimitiveNode.Function)table[i].value).toString(), ep);
@@ -345,7 +349,7 @@ public class Info
 						"Spice template: " + (table[i].value == null ? "" : table[i].value), ep);
 					break;
 			}
-			table[i].ni.newVar(OPTION_KEY, Integer.valueOf(table[i].funct), ep);
+			table[i].ni.newVar(OPTION_KEY, new Integer(table[i].funct), ep);
 		}
 	}
 
